@@ -25,6 +25,7 @@ v.0.5dev (ongoing development)
  * hd44780: Add KOI8-R character mapping (Yura Scheglyuk)
  * shuttleVFD: Add support for devices with USB VID 0x1308 again
  * CFontzPacket: Add CFA-533. Use HD44780 character mapping for CFA533/633.
+ * CFontzPacket: Report cell size correctly, use block character for icon.
  * CFontz633: Deprecate this driver. Use CFontzPacket with Model=633 instead!
  - Remove native win32 support.
 
